--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -34,7 +34,9 @@
             android:id="@+id/signOutButton"
             android:icon="@drawable/baseline_exit_to_app_24"
             android:title="@string/sign_out_button" />
-
-
+        <item
+            android:id="@+id/nav_notes"
+            android:icon="@drawable/ic_menu_tasks"
+            android:title= "@string/menu_notes" />
     </group>
 </menu>
