--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -28,4 +28,9 @@
         android:name="com.example.cs_topics_project_test.task.TaskFragment"
         android:label="@string/menu_tasks"
         tools:layout="@layout/fragment_task_upgrade" />
+    <fragment
+        android:id="@+id/nav_notes"
+        android:name="com.example.cs_topics_project_test.notes.NotesFragment"
+        android:label="@string/menu_notes"
+        tools:layout="@layout/fragment_notes" />
 </navigation>
