--- a/app/src/main/res/layout/item_task_calendar.xml
+++ b/app/src/main/res/layout/item_task_calendar.xml
@@ -12,7 +12,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:padding="8dp"
+        android:paddingTop="8dp"
+        android:paddingStart="8dp"
+        android:paddingEnd="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -38,7 +40,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
-        app:layout_constraintBottom_toBottomOf="@id/linearCalendarTask"
+        app:layout_constraintTop_toBottomOf="@id/linearCalendarTask"
         app:layout_constraintEnd_toEndOf="@id/linearCalendarTask"
         android:layout_marginEnd="8dp"
         android:text="12:00 PM" />
