--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -8,17 +8,16 @@
     tools:context=".login.SignInActivity">
 
     <TextView
-        android:id="@+id/textView7"
+        android:id="@+id/welcomeText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/work_sans_bold"
         android:text="Welcome"
-        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
         android:textColor="@color/signin_white"
         android:textSize="60sp"
         app:layout_constraintTop_toBottomOf="@+id/imageView2"
-
-        tools:layout_editor_absoluteX="68dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
         android:id="@+id/textView9"
@@ -30,8 +29,10 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:textColor="@color/signin_white"
         android:textSize="24sp"
-        app:layout_constraintTop_toBottomOf="@+id/textView7"
-        tools:layout_editor_absoluteX="104dp" />
+        app:layout_constraintTop_toBottomOf="@+id/welcomeText"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+         />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/emailLayout"
@@ -60,7 +61,9 @@
         app:layout_constraintTop_toBottomOf="@+id/emailEt"
         app:passwordToggleEnabled="true"
         app:passwordToggleTint="@color/signin_white"
-        tools:layout_editor_absoluteX="16dp">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+       >
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/passET"
@@ -83,13 +86,14 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="100dp"
-        android:layout_marginTop="27dp"
+        android:layout_marginEnd="64dp"
+        android:layout_marginTop="24dp"
         android:fontFamily="@font/roboto"
         android:text="Not Registered Yet?"
         android:textColor="@color/signin_white"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/forgotpwButton" />
 
     <androidx.appcompat.widget.AppCompatButton
@@ -97,7 +101,7 @@
         android:layout_width="59dp"
         android:layout_height="21dp"
         android:layout_marginStart="12dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="24dp"
         android:background="@android:color/transparent"
         android:text="@string/sign_up_button"
         android:textAllCaps="false"
@@ -108,40 +112,42 @@
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/signInButton"
-        android:layout_width="378dp"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="16dp"
-        android:layout_marginTop="8dp"
+        android:layout_width="380dp"
+        android:layout_height="55dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
         android:background="@drawable/roundedbutton"
         android:backgroundTint="#ff97a0"
         android:fontFamily="@font/roboto_bold"
         android:text="Sign In"
         android:textColor="@color/signin_white"
-        android:textStyle="bold"
-        app:layout_constraintTop_toBottomOf="@+id/passwordLayout"
-        tools:layout_editor_absoluteX="16dp" />
+        app:layout_constraintTop_toBottomOf="@id/passwordLayout"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/forgotpwButton"
-        android:layout_width="186dp"
-        android:layout_height="20dp"
-        android:layout_marginStart="226dp"
-        android:layout_marginTop="7dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp"
         android:background="@android:color/transparent"
         android:fontFamily="@font/roboto"
         android:text="@string/forgot_password"
         android:textAllCaps="false"
         android:textColor="@color/signin_white"
         android:textSize="16sp"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/signInButton" />
 
     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="108dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginTop="32dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/athenalogonobg" />
@@ -160,13 +166,8 @@
             android:textColorHint="@color/signin_white"
             android:textColorLink="@color/signin_white"
             app:layout_constraintTop_toBottomOf="@+id/textView9"
-            tools:layout_editor_absoluteX="16dp" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_begin="205dp" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+             />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
