--- a/app/src/main/res/layout/item_task_completed.xml
+++ b/app/src/main/res/layout/item_task_completed.xml
@@ -67,7 +67,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="4dp"
-                android:text="1/1/2025"
+                android:text="M/D/YYYY X:XX AM"
                 android:textColor="@color/pink_700"/>
         </LinearLayout>
     </LinearLayout>
