--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -28,4 +28,15 @@
         android:name="com.example.cs_topics_project_test.task.TaskFragment"
         android:label="@string/menu_tasks"
         tools:layout="@layout/fragment_task_upgrade" />
+
+    <fragment
+        android:id="@+id/user_settings"
+        android:name="com.example.cs_topics_project_test.ui.UserSettings"
+        android:label="Settings"
+        tools:layout="@layout/fragment_user_settings">
+        <argument
+            android:name="mode"
+            app:argType="string"
+            android:defaultValue="settings" />
+    </fragment>
 </navigation>
