--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -108,7 +108,8 @@
         android:textColor="@color/signin_white"
         android:textSize="16sp"
         app:layout_constraintStart_toEndOf="@+id/textView"
-        app:layout_constraintTop_toBottomOf="@+id/forgotpwButton" />
+        app:layout_constraintTop_toBottomOf="@+id/forgotpwButton"
+        app:layout_constraintBaseline_toBaselineOf="@+id/textView"/>
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/signInButton"
