--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -35,7 +35,7 @@
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/emailEt"
-            android:layout_width="380dp"
+            android:layout_width="match_parent"
             android:layout_height="55dp"
             android:layout_marginTop="16dp"
             android:background="@drawable/roundedbutton"
@@ -117,7 +117,7 @@
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/signUpButton"
-        android:layout_width="380dp"
+        android:layout_width="match_parent"
         android:layout_height="55dp"
         android:layout_marginHorizontal="16dp"
         android:layout_marginStart="16dp"
@@ -143,7 +143,7 @@
         android:layout_marginTop="48dp"
         android:layout_marginStart="90dp"
         android:fontFamily="@font/roboto"
-        android:text="Not Registered Yet?"
+        android:text="Already Registered?"
         android:textColor="@color/signin_white"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -160,7 +160,7 @@
         android:layout_marginTop="48dp"
         android:background="@android:color/transparent"
         android:backgroundTint="#F0EFCFF2"
-        android:text="@string/sign_up_button"
+        android:text="@string/sign_in_button"
         android:textAllCaps="false"
         android:textColor="@color/signin_white"
         android:textSize="16sp"
