--- a/app/src/main/res/layout/fragment_notes.xml
+++ b/app/src/main/res/layout/fragment_notes.xml
@@ -28,7 +28,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
 
-    <TextView
+    <!--<TextView
         android:id="@+id/toggleNotes"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -36,9 +36,9 @@
         android:layout_marginTop="44dp"
         android:text="Toggle Notes"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/buttonNewNoteToggle" />
+        app:layout_constraintTop_toBottomOf="@id/buttonNewNoteToggle" /> -->
 
-    <ImageButton
+    <!-- <ImageButton
         android:id="@+id/buttonNotesSort"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -47,7 +47,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginTop="16dp"
-        android:layout_marginStart="16dp" />
+        android:layout_marginStart="16dp" /> -->
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
