--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -70,6 +70,7 @@
             android:layout_width="match_parent"
             android:layout_height="49dp"
             android:background="@drawable/roundedbutton"
+            android:backgroundTint="@color/signin_pink"
             android:hint="@string/password"
             android:inputType="textPassword"
             android:textAlignment="inherit"
@@ -159,6 +160,7 @@
             android:layout_height="55dp"
             android:layout_marginTop="16dp"
             android:background="@drawable/roundedbutton"
+            android:backgroundTint="@color/signin_pink"
             android:hint="@string/email"
             android:inputType="textEmailAddress"
             android:textAlignment="inherit"
