--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -39,6 +39,7 @@
             android:layout_height="55dp"
             android:layout_marginTop="16dp"
             android:background="@drawable/roundedbutton"
+            android:backgroundTint="@color/signin_pink"
             android:hint="@string/email"
             android:inputType="textEmailAddress"
             android:textAlignment="inherit"
@@ -71,6 +72,7 @@
             android:layout_width="match_parent"
             android:layout_height="49dp"
             android:background="@drawable/roundedbutton"
+            android:backgroundTint="@color/signin_pink"
             android:hint="@string/password"
             android:inputType="textPassword"
             android:textAlignment="inherit"
@@ -105,6 +107,7 @@
             android:layout_width="match_parent"
             android:layout_height="49dp"
             android:background="@drawable/roundedbutton"
+            android:backgroundTint="@color/signin_pink"
             android:textAlignment="inherit"
             android:textColor="@color/signin_white"
             android:textColorHighlight="@color/signin_white"
