--- a/app/src/main/res/layout/forgot_pw.xml
+++ b/app/src/main/res/layout/forgot_pw.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FCC0C5"
+    android:background="#fff1f2"
     >
 
 
@@ -12,41 +12,52 @@
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="149dp"
-        android:layout_marginTop="188dp"
-        android:layout_weight="1"
-        android:text="@string/forgot_password"
+        android:textAlignment="center"
+        android:fontFamily="@font/roboto_bold"
+        android:textColor="#b84c65"
+        android:text="Forgot Password?"
+        android:textSize="34sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="200dp"
+        />
 
     <EditText
         android:id="@+id/editTextTextEmailAddress"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="104dp"
-        android:layout_marginTop="18dp"
+        android:layout_width="262dp"
+        android:layout_height="57dp"
+        android:layout_marginTop="25dp"
+        android:background="@color/calendar_background"
         android:ems="10"
         android:hint="@string/email"
         android:inputType="textEmailAddress"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
     <Button
         android:id="@+id/submit_forgotPW"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="149dp"
-        android:layout_marginTop="23dp"
+        android:layout_width="257dp"
+        android:layout_height="45dp"
+        android:layout_marginTop="30dp"
+        android:background="@drawable/roundedbutton"
+        android:backgroundTint="#b84c65"
         android:text="Submit"
+        android:textColor="#fff1f2"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />
 
     <Button
         android:id="@+id/backButton"
+        android:background="@drawable/roundedbutton"
+        android:backgroundTint="#b84c65"
+        android:textColor="#fff1f2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="19dp"
-        android:layout_marginTop="29dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="30dp"
         android:text="Back"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
